--- a/notas-musicais/components/exercicio/Questao/index.module.css
+++ b/notas-musicais/components/exercicio/Questao/index.module.css
@@ -1,10 +1,3 @@
-.container {
-  margin: 0 auto;
-  max-width: 500px;
-
-  text-align: center;
-}
-
 .barraDeStatus {
   background-color: lightgrey;
 }
@@ -33,11 +26,15 @@
 .notaMusical {
   padding: 0.5rem;
   cursor: pointer;
+  background-color: whitesmoke;
 
   font-size: large;
   flex-basis: 24%;
   font-weight: bold;
   font-style: italic;
+
+  border: 1px solid gray;
+  border-radius: 3px;
 }
 
 .proximoExercicio {
