--- a/notas-musicais/components/NovoExercicio/index.module.css
+++ b/notas-musicais/components/NovoExercicio/index.module.css
@@ -14,8 +14,8 @@
 
 .instrumento {
   flex-grow: 0;
-  max-width: 200px;
-  height: fit-content;
+  width: 200px;
+  height: 240px;
   background-color: WhiteSmoke;
 
   padding: 0.5rem;
@@ -27,6 +27,7 @@
 
   cursor: pointer;
 }
+
 .instrumento:hover {
   background-color: lightslategray;
   color: whitesmoke;
@@ -34,6 +35,6 @@
 
 .instrumento img {
   margin-top: 0.75rem;
-  max-width: 100%;
+  width: 100%;
   height: auto;
 }
